# diversitree

./: .Rbuildignore  .gitignore  .hgignore  .travis.yml  404.html  ChangeLog  DESCRIPTION  Makefile  NAMESPACE  README  README.md  TODO  argnames.html  asr-bisse.html  asr-mkn.html  asr.html  authors.html  big.brother.html  check.html  combine.html  configure  configure.ac  configure.win  constants.html  constrain.html  diversitree-deprecated.html  find.mle.html  geosse.phy.html  history.from.sim.html  index.html  make.bd.html  make.bd.split.html  make.bd.t.html  make.bisse.html  make.bisse.split.html  make.bisse.td.html  make.bisseness.html  make.bm.html  make.clade.tree.html  make.classe.html  (+27 more)
R/: asr-bisse.R  asr-geosse.R  asr-mkn.R  asr-musse.R  asr-t.R  asr.R  check.R  clade-tree.R  continuous.R  diversitree-branches.R  drop.tip.fixed.R  expm.R  history.R  mcmc-norm.R  mcmc.R  mle-methods.R  mle-subplexR.R  mle.R  model-bd-nee.R  model-bd-split.R  model-bd-t.R  model-bd.R  model-bisse-split.R  model-bisse-t.R  model-bisse-td.R  model-bisse-unresolved.R  model-bisse.R  model-bisseness-unresolved.R  model-bisseness.R  model-bm-contrasts.R  model-bm-pruning.R  model-bm-vcv.R  model-bm.R  model-classe.R  model-eb.R  model-geosse-split.R  model-geosse-t.R  model-geosse.R  model-lambda.R  model-mkn-expokit.R  (+27 more)
diversitree/: ChangeLog  DESCRIPTION  NAMESPACE  README  TODO  cleanup  configure  configure.ac  configure.win  cvodes-notes.txt  split-recycle.R
diversitree-tests/: phy.Rdata  run_tests.R  runit-asr-t.R  runit-asr.R  runit-bd-t.R  runit-bd.R  runit-bisse-split.R  runit-bisse-t.R  runit-bisse.R  runit-bisseness.R  runit-bm.R  runit-classe.R  runit-expm.R  runit-geosse.R  runit-mcmc.R  runit-mkn.R  runit-mle.R  runit-musse-multitrait.R  runit-musse-t.R  runit-musse.R  runit-quasse-internal.R  runit-quasse-split.R  runit-quasse.R  runit-time-machine.R  runit-unresolved.R  zzz.R
diversitree/R/: asr-bisse-split.R  asr-bisse-t.R  asr-bisse.R  asr-mkn.R  asr-musse-split.R  asr-musse.R  asr-t.R  asr.R  bisse-eqs.R  bisse.R  bucexp.R  check.R  clade-tree-plot.R  clade-tree.R  combine.R  constrain.R  continuous.R  cvodes.R  desolve.R  diversitree-branches-C.R  diversitree-branches.R  drop.tip.fixed.R  dtlik.R  expm.R  gslode.R  history.R  mcmc-hmc.R  mcmc.R  mle-mixed.R  mle-subplexR.R  mle-tgp.R  mle.R  model-bd-nee.R  model-bd-ode.R  model-bd-split.R  model-bd-t-old.R  model-bd-t.R  model-bd-t2.R  model-bd.R  model-bisse-split.R  (+65 more)
diversitree/data/: geosse.R
diversitree/inst/: CITATION  include
diversitree/inst/tests/: classe-tree.ttn  helper-diversitree.R  test-bd-t.R  test-bd.R  test-bisse-legacy.R  test-bisse-td.R  test-bisse.R  test-bisseness.R  test-bm.R  test-branches.R  test-eb.R  test-expm.R  test-geosse.R  test-lambda.R  test-mcmc.R  test-mle.R  test-musse-multitrait.R  test-musse.R  test-ode.R  test-ou.R  test-pgls.R  test-quasse-internal.R  test-quasse-split.R  test-rescale.R  test-time-machine.R  zzz.R
diversitree/man/: argnames.Rd  asr-bisse.Rd  asr-mkn.Rd  asr.Rd  big.brother.Rd  check.Rd  combine.Rd  constants.Rd  constrain.Rd  diversitree-deprecated.Rd  find.mle.Rd  geosse.phy.Rd  make.bd.Rd  make.bd.split.Rd  make.bd.t.Rd  make.bisse.Rd  make.bisse.split.Rd  make.bisse.td.Rd  make.bisseness.Rd  make.bm.Rd  make.clade.tree.Rd  make.classe.Rd  make.geosse.Rd  make.geosse.split.Rd  make.geosse.t.Rd  make.mkn.Rd  make.mkn.deriv.Rd  make.musse.Rd  make.musse.multitrait.Rd  make.musse.split.Rd  make.musse.td.Rd  make.pgls.Rd  make.prior.Rd  make.quasse.Rd  make.quasse.split.Rd  mcmc.Rd  plot.history.Rd  profiles.plot.Rd  protect.Rd  sim.character.Rd  (+5 more)
diversitree/src/: GslOdeBase.cpp  GslOdeBase.h  GslOdeCompiled.cpp  GslOdeCompiled.h  GslOdeR.cpp  GslOdeR.h  GslOdeTime.cpp  GslOdeTime.h  Makevars  Makevars.in  Makevars.win  Spline.cpp  Spline.h  TimeMachine.cpp  TimeMachine.h  asr-joint.c  bd-eqs.c  bisse-eqs.c  bisseness-eqs.c  bucexp.f  classe-eqs.c  config.h.in  config.h.win  continuous.c  continuous.h  cvodes_all_branches.c  cvodes_all_branches.h  cvodes_asr_marginal.c  cvodes_interface.c  cvodes_interface_fwd.c  cvodes_obj.c  cvodes_obj.h  cvodes_obj_fwd.c  cvodes_obj_fwd.h  derivs.c  derivs.h  dgcoov.f  dgpadm.f  dmexpv.f  dnchbv.f  (+38 more)
diversitree/src/cvodes/: cvodea.c  cvodes.c  cvodes_diag.c  cvodes_direct.c  cvodes_io.c  cvodes_lapack.c  cvodes_spils.c  nvector_serial.c  sundials_direct.c
diversitree/src/cvodes/include/: user_data.h
diversitree/src/cvodes/include/sundials/: sundials_config.h  sundials_lapack.h
doc/: .interactive  Makefile  derivations.tex  diversitree-ext-bisse.c  diversitree-ext-cvodes.c  diversitree-ext-mk2.c  diversitree-ext.Rnw  diversitree-tuning.Rnw  diversitree-tutorial.Rnw  dtsweave.sty  refs.bib  refstyle.bst
inst/: CITATION  CONTRIBUTORS.md  update-gh-pages.sh
logo/: beetles.eps  logo.R
man/: asr-bisse.Rd  asr.Rd  check.Rd  constants.Rd  constrain.Rd  diversitree-deprecated.Rd  diversitree-package.Rd  find.mle.Rd  history.from.sim.Rd  make.bd.Rd  make.bd.split.Rd  make.bd.t.Rd  make.bisse.Rd  make.bisse.split.Rd  make.bisse.td.Rd  make.bisseness.Rd  make.bm.Rd  make.classe.Rd  make.geosse.Rd  make.geosse.split.Rd  make.geosse.t.Rd  make.mkn.Rd  make.musse.Rd  make.musse.td.Rd  make.quasse.Rd  mcmc.Rd  plot.history.Rd  protect.Rd  quasse-common.Rd  set.defaults.Rd  sim.character.Rd  simulate.Rd  trait.plot.Rd
pub/: Makefile  diversitree-suppl.tex  diversitree.tex  dtsweave.sty  jecol.bst  ms.sty  refs.bib  suppmat.sty
reference/: argnames.html  asr-bisse.html  asr-mkn.html  asr.html  big.brother.html  check.html  combine.html  constants.html  constrain.html  diversitree-deprecated.html  diversitree-package.html  find.mle.html  history.from.sim.html  index.html  make.bd.html  make.bd.split.html  make.bd.t.html  make.bisse.html  make.bisse.split.html  make.bisse.td.html  make.bisseness.html  make.bm.html  make.clade.tree.html  make.classe.html  make.geosse.html  make.geosse.split.html  make.geosse.t.html  make.mkn.html  make.musse.html  make.musse.multitrait.html  make.musse.split.html  make.musse.td.html  make.pgls.html  (+13 more)
(+128 files in other folders)
